# circuits

./: .env.example  .gitignore  .python-version  Cargo.toml  README.md  download_test_blocks.sh  requirements.txt
.noir_cache/: hash_cache.json
artifact_cache/: build_block_entrypoint_proof_and_input_fc4ca3710320016029d632f81c5a99a2.pickle  build_recursive_lp_hash_proof_and_input_eac70bf72111dd9622af64f1bb86912f.pickle  build_recursive_payment_proof_and_input_6768f7c2951b7b9f93ff023627ae65be.pickle  build_recursive_sha256_proof_and_input_f65f10161032214abceb81c84d22a7de.pickle
block_verification/: Prover.toml  Verifier.toml
block_verification/proofs/: circuits.proof
block_verification/src/: main.nr
cache/: build_recursive_block_proof_and_input_cache.pkl  build_recursive_lp_hash_proof_and_input_cache.pkl  build_recursive_payment_proof_and_input_cache.pkl  build_recursive_sha256_proof_and_input_cache.pkl
circuits/block_verification/: Nargo.toml  Prover.toml  Verifier.toml
circuits/giga/: Nargo.toml  Prover.toml  Verifier.toml
circuits/lib/: Nargo.toml
circuits/lp_hash_verification/: Nargo.toml  Prover.toml
circuits/payment_verification/: Nargo.toml  Prover.toml
circuits/recursive_sha/: Nargo.toml  Prover.toml  Verifier.toml
circuits/txn_validator/: Nargo.toml
circuits/txn_verification/: Nargo.toml
core/src/: btc_light_client.rs  lib.rs  lp.rs  payment.rs  sha256_merkle.rs
elf/: riscv32im-succinct-zkvm-elf
generated_block_tree_circuits/: block_tree_height_1.json  block_tree_height_10.json  block_tree_height_11.json  block_tree_height_12.json  block_tree_height_13.json  block_tree_height_14.json  block_tree_height_15.json  block_tree_height_16.json  block_tree_height_17.json  block_tree_height_18.json  block_tree_height_19.json  block_tree_height_2.json  block_tree_height_20.json  block_tree_height_3.json  block_tree_height_4.json  block_tree_height_5.json  block_tree_height_6.json  block_tree_height_7.json  block_tree_height_8.json  block_tree_height_9.json
lib/: Cargo.toml
lib/src/: bitcoin.rs  btc_light_client.rs  constants.nr  constants.rs  lib.rs  lp.rs  lp_hash.rs  payment.rs  proof.rs  sha256_merkle.rs  transaction.rs  tx_hash.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
scripts/: bits_to_target.py  block_data_gen.py  create_recursive_sha256_hashlist.py  econ.py  generate_block_tree_verification_keys.py  generate_recursive_circuit_verification_key_hashes.py  generate_recursive_sha_vkeys.py  generate_subcircuit_verification_keys.py  get_block_circuit_verification_key_hash.py  get_recursive_circuit_verification_key_hashes.py  test.py  time_to_mine.py  txn_gen.py  verifier_dump.py
tests/: Cargo.toml  block_circuit_test.py  giga_circuit_test.py  lp_hash_circuit_test.py  mainnet_test_data.json  payment_verification_circuit_test.py  recursive_sha256_circuit_test.py
tests/data/: block_854136.hex  block_856800.hex  block_858564.hex  block_858565.hex  block_858566.hex  block_858567.hex  block_858568.hex
tests/src/bitcoin/: main.rs
tests/src/giga/: main.rs
tests/src/lp_hash/: main.rs
tests/src/payment/: main.rs
tests/src/sha256_merkle/: main.rs
tests/src/tx_hash/: main.rs
tests/utils/: noir_lib.py
txn_verification/: Prover.toml  ProverDemo.toml
txn_verification/src/: main.nr  sha256_verify.nr  sha256_vkhash_list.nr  txn_validator.nr
utils/: Cargo.toml  btc_data.py  btc_wallet.py  constants.py  fetch_block_data.py  noir_lib.py  proxy_wallet.py  rift_lib.py
(+47 files in other folders)
