[package]
name = "rift-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sha2 = {  workspace = true }
crypto-bigint = {  workspace = true }
serde = { workspace = true }
hex-literal = {  workspace = true }
alloy-merkle-tree = {  workspace = true }
alloy-primitives = {  workspace = true }
