[package]
version = "0.1.0"
name = "rift-script"
edition = "2021"
default-run = "rift"

[[bin]]
name = "rift"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[[bin]]
name = "plonk_test"
path = "src/bin/plonk_test.rs"

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
rift-lib = { path = "../lib" }
sp1-sdk = { workspace = true }
clap = { workspace = true }
bitcoin = { workspace = true }
utils = { path = "../utils" }
hex-literal = { workspace = true } 
crypto-bigint = { workspace = true } 


[build-dependencies]
sp1-helper = "1.1.0"
